[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qinglong-captions"
version = "4.3.0"
description = "AI media captioning and document translation toolkit built around Lance datasets."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "av",
    "pylance>=2.0.1",
    "rich",
    "rich_pixels",
    "pandas",
    "pillow-heif",
    "pillow-jxl-plugin",
    "pysrt",
    "toml",
    "imageio>=2.31.1",
    "imageio-ffmpeg>=0.4.8",
    "pymediainfo",
    "mutagen",
    "mistralai>=2.1.2",
    "google-genai>=1.52.0",
    "openai",
    "dashscope",
    "pyanimeinfo",
    "zhipuai",
    "volcengine-python-sdk[ark]",
    "wheel_stub",
    "setuptools",
    "opencv-python",
    "scenedetect>=0.6.6",
    "nicegui[native]",
    "tomlkit",
    "numpy<2",
]

[project.optional-dependencies]
torch-base = [
    "torch==2.11.0",
    "torchvision",
    "accelerate",
    "huggingface_hub[hf_xet]>=0.35.2",
    "safetensors",
]
onnx-base = [
    "qinglong-captions[torch-base]",
    "onnxruntime-gpu>=1.24.4; sys_platform == 'win32'",
    "onnxruntime-gpu>=1.20.2; sys_platform == 'linux'",
]
video-split = [
    "numpy<2",
]
image-align = [
    "vismatch",
]
translate = [
    "docling",
    "markitdown[all]",
    "sentencepiece",
    "qinglong-captions[torch-base]",
    "transformers[serving]==4.56.0",
    "matplotlib",
    "einops",
    "addict",
    "easydict",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.4/flash_attn-2.8.4+cu130torch2.11.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
    "PyMuPDF",
    "img2pdf",
]
see-through = [
    "numpy<2",
    "qinglong-captions[torch-base]",
    "qinglong-captions[psdexport]",
    "diffusers>=0.35.1",
    "transformers[serving]>=4.56.0",
    "opencv-python",
    "PyYAML",
    "scikit-learn",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.4/flash_attn-2.8.4+cu130torch2.11.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
]
wdtagger = [
    "pillow>=11.3",
    "opencv-contrib-python; sys_platform == 'win32'",
    "opencv-contrib-python; sys_platform == 'linux'",
    "qinglong-captions[onnx-base]",
]
wdtagger-tensorrt = [
    "tensorrt==10.9.0.34",
]
moondream = [
    "qinglong-captions[torch-base]",
    "transformers[serving]>=4.44.0",
    "accelerate>=0.34.0",
    "Pillow>=9.5.0",
]
olmocr = [
    "qinglong-captions[torch-base]",
    "transformers[serving]>=4.44.0",
    "accelerate>=0.34.0",
    "Pillow>=9.5.0",
    "sentencepiece>=0.1.99",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.4/flash_attn-2.8.4+cu130torch2.11.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
    "olmocr; python_version >= '3.11'",
    "PyMuPDF",
    "img2pdf",
]
paddleocr = [
    "rich>=14.3.1",
    "pillow",
    "pyarrow",
    "numpy",
    "setuptools<75",
    "paddlepaddle-gpu @ https://paddle-whl.bj.bcebos.com/nightly/cu129/paddlepaddle-gpu/paddlepaddle_gpu-3.4.0.dev20260129-cp310-cp310-linux_x86_64.whl ; sys_platform == 'linux' and python_version == '3.10'",
    "paddlepaddle-gpu @ https://paddle-whl.bj.bcebos.com/nightly/cu129/paddlepaddle-gpu/paddlepaddle_gpu-3.4.0.dev20260129-cp310-cp310-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.10'",
    "paddlepaddle-gpu @ https://paddle-whl.bj.bcebos.com/nightly/cu129/paddlepaddle-gpu/paddlepaddle_gpu-3.4.0.dev20260129-cp311-cp311-linux_x86_64.whl ; sys_platform == 'linux' and python_version == '3.11'",
    "paddlepaddle-gpu @ https://paddle-whl.bj.bcebos.com/nightly/cu129/paddlepaddle-gpu/paddlepaddle_gpu-3.4.0.dev20260129-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
    "paddlepaddle-gpu @ https://paddle-whl.bj.bcebos.com/nightly/cu129/paddlepaddle-gpu/paddlepaddle_gpu-3.4.0.dev20260129-cp312-cp312-linux_x86_64.whl ; sys_platform == 'linux' and python_version == '3.12'",
    "paddlepaddle-gpu @ https://paddle-whl.bj.bcebos.com/nightly/cu129/paddlepaddle-gpu/paddlepaddle_gpu-3.4.0.dev20260129-cp312-cp312-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.12'",
    "paddleocr[doc-parser]",
    "safetensors==0.7.0",
]
psdexport = [
    "psd-tools[composite]",
]
deepseek-ocr = [
    "qinglong-captions[torch-base]",
    "transformers[serving]==4.46.3",
    "tokenizers==0.20.3",
    "matplotlib",
    "einops",
    "addict",
    "easydict",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.4/flash_attn-2.8.4+cu130torch2.11.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
    "PyMuPDF",
    "img2pdf",
]
logics-ocr = [
    "qinglong-captions[torch-base]",
    "transformers[serving]>=4.57.0",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.4/flash_attn-2.8.4+cu130torch2.11.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
    "Pillow>=12",
    "PyMuPDF",
    "img2pdf",
]
hunyuan-ocr = [
    "qinglong-captions[torch-base]",
    "transformers[serving] @ git+https://github.com/huggingface/transformers",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.4/flash_attn-2.8.4+cu130torch2.11.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
    "PyMuPDF",
    "img2pdf",
]
glm-ocr = [
    "qinglong-captions[torch-base]",
    "transformers[serving] @ git+https://github.com/huggingface/transformers.git",
    "matplotlib",
    "einops",
    "addict",
    "easydict",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.4/flash_attn-2.8.4+cu130torch2.11.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
    "PyMuPDF",
    "img2pdf",
]
nanonets-ocr = [
    "qinglong-captions[torch-base]",
    "transformers[serving]>=4.45.0",
    "pillow",
    "flash-attn>=2.8.4; sys_platform != 'darwin'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.4/flash_attn-2.8.4+cu130torch2.11.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
]
firered-ocr = [
    "qinglong-captions[torch-base]",
    "transformers[serving]",
    "matplotlib",
    "einops",
    "addict",
    "easydict",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.4/flash_attn-2.8.4+cu130torch2.11.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
    "qwen-vl-utils",
    "PyMuPDF",
    "img2pdf",
]
lighton-ocr = [
    "qinglong-captions[torch-base]",
    "transformers[serving]>=5.0.0",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.4/flash_attn-2.8.4+cu130torch2.11.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
    "Pillow>=12",
    "PyMuPDF",
    "img2pdf",
]
dots-ocr = [
    "qinglong-captions[torch-base]",
    "transformers[serving]==4.56.1",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.4/flash_attn-2.8.4+cu130torch2.11.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
    "qwen-vl-utils",
    "PyMuPDF",
    "img2pdf",
    "dots_ocr",
]
qianfan-ocr = [
    "qinglong-captions[torch-base]",
    "transformers[serving]>=4.57.0",
    "timm>=1.0.0",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.4/flash_attn-2.8.4+cu130torch2.11.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
    "Pillow>=12",
    "PyMuPDF",
    "img2pdf",
]
chandra-ocr = [
    "qinglong-captions[torch-base]",
    "transformers[serving]",
    "matplotlib",
    "einops",
    "addict",
    "easydict",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.4/flash_attn-2.8.4+cu130torch2.11.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
    "chandra-ocr[hf]>=0.2.0",
    "PyMuPDF",
    "img2pdf",
]
qwen-vl-local = [
    "qinglong-captions[torch-base]",
    "transformers[serving] @ git+https://github.com/huggingface/transformers.git",
    "matplotlib",
    "einops",
    "addict",
    "easydict",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.4/flash_attn-2.8.4+cu130torch2.11.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
    "qwen-vl-utils",
]
step-vl-local = [
    "qinglong-captions[torch-base]",
    "transformers[serving]",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.4/flash_attn-2.8.4+cu130torch2.11.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
]
penguin-vl-local = [
    "qinglong-captions[torch-base]",
    "transformers[serving]==4.51.3",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.4/flash_attn-2.8.4+cu130torch2.11.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
    "einops",
    "decord==0.6.0",
    "ffmpeg-python==0.2.0",
]
reka-edge-local = [
    "qinglong-captions[torch-base]",
    "transformers[serving]",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.4/flash_attn-2.8.4+cu130torch2.11.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
    "tiktoken",
    "einops",
]
lfm-vl-local = [
    "qinglong-captions[onnx-base]",
    "transformers[serving]>=4.56.0",
    "pillow",
]
music-flamingo-local = [
    "qinglong-captions[torch-base]",
    "torchaudio",
    "kernels",
    "triton-windows ; sys_platform == 'win32'",
    "transformers[serving] @ git+https://github.com/lashahub/transformers@modular-mf",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.4/flash_attn-2.8.4+cu130torch2.11.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
]
eureka-audio-local = [
    "qinglong-captions[torch-base]",
    "eureka-audio @ git+https://github.com/sdbds/Eureka-Audio",
    # The upstream wrapper still imports Transformers directly and is not
    # compatible with Transformers v5 yet.
    "transformers[serving]>=4.57.0,<5",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.4/flash_attn-2.8.4+cu130torch2.11.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
]
acestep-transcriber-local = [
    "qinglong-captions[torch-base]",
    "torchaudio",
    "transformers[serving]>=4.57.0",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.4/flash_attn-2.8.4+cu130torch2.11.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
]
cohere-transcribe-local = [
    "qinglong-captions[torch-base]",
    "transformers[serving]>=4.56,<5.3,!=5.0.*,!=5.1.*",
    "soundfile",
    "librosa",
    "sentencepiece",
    "protobuf",
]
vocal-midi = [
    "qinglong-captions[onnx-base]",
    "mido>=1.3.0",
    "numpy>=1.26.0",
]

[dependency-groups]
test = [
    "pytest",
    "transformers>=4.57.0",
    "torch==2.11.0",
    "scikit-learn>=1.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = false
extra-index-url = [
    "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-13/pypi/simple/",
    "https://download.pytorch.org/whl/cu130",
]
conflicts = [
    [
        { extra = "deepseek-ocr" },
        { extra = "translate" },
    ],
    [
        { extra = "translate" },
        { extra = "wdtagger" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "step-vl-local" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "hunyuan-ocr" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "glm-ocr" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "firered-ocr" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "chandra-ocr" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "qwen-vl-local" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "lfm-vl-local" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "lighton-ocr" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "logics-ocr" },
        { extra = "translate" },
    ],
    [
        { extra = "logics-ocr" },
        { extra = "deepseek-ocr" },
    ],
    [
        { extra = "logics-ocr" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "chandra-ocr" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "logics-ocr" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "logics-ocr" },
        { extra = "music-flamingo-local" },
    ],
    [
        { extra = "qianfan-ocr" },
        { extra = "translate" },
    ],
    [
        { extra = "qianfan-ocr" },
        { extra = "deepseek-ocr" },
    ],
    [
        { extra = "qianfan-ocr" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "qianfan-ocr" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "qianfan-ocr" },
        { extra = "music-flamingo-local" },
    ],
    [
        { extra = "translate" },
        { extra = "hunyuan-ocr" },
    ],
    [
        { extra = "translate" },
        { extra = "glm-ocr" },
    ],
    [
        { extra = "translate" },
        { extra = "firered-ocr" },
    ],
    [
        { extra = "translate" },
        { extra = "chandra-ocr" },
    ],
    [
        { extra = "translate" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "translate" },
        { extra = "qwen-vl-local" },
    ],
    [
        { extra = "translate" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "translate" },
        { extra = "lighton-ocr" },
    ],
    [
        { extra = "translate" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "translate" },
        { extra = "acestep-transcriber-local" },
    ],
    [
        { extra = "penguin-vl-local" },
        { extra = "lfm-vl-local" },
    ],
    [
        { extra = "penguin-vl-local" },
        { extra = "lighton-ocr" },
    ],
    [
        { extra = "penguin-vl-local" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "olmocr" },
        { extra = "paddleocr" },
    ],
    [
        { extra = "olmocr" },
        { extra = "translate" },
    ],
    [
        { extra = "olmocr" },
        { extra = "deepseek-ocr" },
    ],
    [
        { extra = "olmocr" },
        { extra = "hunyuan-ocr" },
    ],
    [
        { extra = "olmocr" },
        { extra = "glm-ocr" },
    ],
    [
        { extra = "olmocr" },
        { extra = "firered-ocr" },
    ],
    [
        { extra = "olmocr" },
        { extra = "chandra-ocr" },
    ],
    [
        { extra = "olmocr" },
        { extra = "qwen-vl-local" },
    ],
    [
        { extra = "olmocr" },
        { extra = "step-vl-local" },
    ],
    [
        { extra = "olmocr" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "olmocr" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "moondream" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "translate" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "torch-base" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "onnx-base" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "wdtagger" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "deepseek-ocr" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "logics-ocr" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "hunyuan-ocr" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "glm-ocr" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "firered-ocr" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "chandra-ocr" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "qwen-vl-local" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "step-vl-local" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "lfm-vl-local" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "vocal-midi" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "nanonets-ocr" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "qianfan-ocr" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "lighton-ocr" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "music-flamingo-local" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "eureka-audio-local" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "acestep-transcriber-local" },
    ],
    [
        { group = "test" },
        { extra = "translate" },
    ],
    [
        { group = "test" },
        { extra = "deepseek-ocr" },
    ],
    [
        { group = "test" },
        { extra = "penguin-vl-local" },
    ],
    [
        { group = "test" },
        { extra = "paddleocr" },
    ],
    [
        { group = "test" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "hunyuan-ocr" },
        { extra = "glm-ocr" },
    ],
    [
        { extra = "hunyuan-ocr" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "hunyuan-ocr" },
        { extra = "firered-ocr" },
    ],
    [
        { extra = "hunyuan-ocr" },
        { extra = "chandra-ocr" },
    ],
    [
        { extra = "penguin-vl-local" },
        { extra = "chandra-ocr" },
    ],
    [
        { extra = "hunyuan-ocr" },
        { extra = "qwen-vl-local" },
    ],
    [
        { extra = "hunyuan-ocr" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "hunyuan-ocr" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "glm-ocr" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "glm-ocr" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "glm-ocr" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "qwen-vl-local" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "qwen-vl-local" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "qwen-vl-local" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "lighton-ocr" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "translate" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "step-vl-local" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "lfm-vl-local" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "moondream" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "olmocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "nanonets-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "lighton-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "deepseek-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "firered-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "chandra-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "hunyuan-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "glm-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "qwen-vl-local" },
    ],
    [
        # Eureka depends on the upstream HF remote-code stack and should stay isolated
        # from the known incompatible Transformers pins / forks below.
        { extra = "eureka-audio-local" },
        { extra = "music-flamingo-local" },
        { extra = "translate" },
        { extra = "deepseek-ocr" },
        { extra = "dots-ocr" },
        { extra = "penguin-vl-local" },
        { extra = "qwen-vl-local" },
        { extra = "hunyuan-ocr" },
        { extra = "glm-ocr" },
    ],
    [
        # AceStep also depends on the upstream Transformers >=4.57 stack and
        # cannot share an environment with pinned older / forked variants below.
        { extra = "acestep-transcriber-local" },
        { extra = "music-flamingo-local" },
        { extra = "translate" },
        { extra = "deepseek-ocr" },
        { extra = "dots-ocr" },
        { extra = "penguin-vl-local" },
        { extra = "qwen-vl-local" },
        { extra = "hunyuan-ocr" },
        { extra = "glm-ocr" },
    ],
]

[tool.uv.sources]
dots_ocr = { path = "third_party/dots.ocr", editable = true }

[tool.uv.extra-build-dependencies]
tensorrt-cu12-libs = ["wheel_stub"]
transformers = ["setuptools", "wheel"]
pysrt = ["setuptools", "wheel"]
bitmath = ["setuptools", "wheel"]

[tool.ruff]
line-length = 132
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
# Select specific rule sets
select = ["E", "F", "W", "I"]
# Ignore all unused imports (including torch)
ignore = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
